# ssyp_db

./: .clang-format  .gitignore  CMakeLists.txt  vcpkg.json
.github/workflows/: test_on_push.yaml
benchmark/: CMakeLists.txt  benchmark.cpp  generate_table.cpp
lib/: CMakeLists.txt
lib/include/: interface.cpp  interface.h  logging.h  settings.h  ssyp_db.h
lib/src/: common.h  datamodel.cpp  datamodel.h  in_memory_storage.cpp  in_memory_storage.h  logging.cpp  logging.h  ssyp_db.cpp  storage.cpp  storage.h
test/: CMakeLists.txt  datamodel_test.cpp  interface_test.cpp  main.cpp  storage_test.cpp
